--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/"
 	},
 	"dependencies": {
+		"@ckeditor/ckeditor5-build-classic": "^41.0.0",
+		"@ckeditor/ckeditor5-vue": "^5.1.0",
 		"@element-plus/icons-vue": "^2.0.10",
 		"@wangeditor/editor": "^5.1.23",
 		"@wangeditor/editor-for-vue": "^5.1.11",
